# protocol-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/protocol_compiler/: parse.py  schemas.py  validate.py
tests/: test_parse.py  test_schemas.py  test_validate.py
